@@ -496,6 +496,9 @@ const MACH " (gen-sym mach) "_mach =
 		  copyright-red-hat package-red-hat-simulators)
    "\
 
+#if HAVE_CONFIG_H
+#include \"config.h\"
+#endif
 #include \"@cpu@.h\"
 
 using namespace @cpu@; // FIXME: namespace organization still wip
